@@ -1,5 +1,7 @@
 *SVN*
 
+* Oracle: resolve test failures, use prefetched primary key for inserts, check for null defaults. Factor out some common methods from all adapters.  #6515 [Michael Schoen]
+
 * Make add_column use the options hash with the Sqlite Adapter. Closes #6464 [obrie]
 
 * Document other options available to migration's add_column. #6419 [grg]
